{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 215,
  "lineage": "91f1bf30-2b0a-2dd4-1ea6-fb94bdbffec4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a6c89b63204d36d",
            "arn": "arn:aws:ec2:ap-northeast-1:503561449641:elastic-ip/eipalloc-06a6c89b63204d36d",
            "domain": "vpc",
            "id": "eipalloc-06a6c89b63204d36d",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-13-231-64-62.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "13.231.64.62",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "api-3000-private-01-nat-eip"
            },
            "tags_all": {
              "Name": "api-3000-private-01-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:503561449641:internet-gateway/igw-024395406139317a1",
            "id": "igw-024395406139317a1",
            "owner_id": "503561449641",
            "tags": {
              "Name": "api-3000-private-01-igw"
            },
            "tags_all": {
              "Name": "api-3000-private-01-igw"
            },
            "vpc_id": "vpc-03940ad0cf08a3e99"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:loadbalancer/app/api-3000-private-01-alb/780896b85eabb3b9",
            "arn_suffix": "app/api-3000-private-01-alb/780896b85eabb3b9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "api-3000-private-01-alb-549222521.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:loadbalancer/app/api-3000-private-01-alb/780896b85eabb3b9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "api-3000-private-01-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d247957e7533b8f3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00b94ec85b8488340"
              },
              {
                "subnet_id": "subnet-0ef445f6a677ff546"
              }
            ],
            "subnets": [
              "subnet-00b94ec85b8488340",
              "subnet-0ef445f6a677ff546"
            ],
            "tags": {
              "Name": "api-3000-private-01-alb"
            },
            "tags_all": {
              "Name": "api-3000-private-01-alb"
            },
            "timeouts": {
              "create": "20m",
              "delete": "20m",
              "update": "20m"
            },
            "vpc_id": "vpc-03940ad0cf08a3e99",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:listener/app/api-3000-private-01-alb/780896b85eabb3b9/8090561cb89d7591",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:targetgroup/api-3000-private-01-tg/5b530df09742f424",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:listener/app/api-3000-private-01-alb/780896b85eabb3b9/8090561cb89d7591",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:loadbalancer/app/api-3000-private-01-alb/780896b85eabb3b9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.app_alb",
            "aws_lb_target_group.express_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "express_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:targetgroup/api-3000-private-01-tg/5b530df09742f424",
            "arn_suffix": "targetgroup/api-3000-private-01-tg/5b530df09742f424",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:503561449641:targetgroup/api-3000-private-01-tg/5b530df09742f424",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "api-3000-private-01-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "api-3000-private-01-tg"
            },
            "tags_all": {
              "Name": "api-3000-private-01-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-03940ad0cf08a3e99"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a6c89b63204d36d",
            "association_id": "eipassoc-00286f4680d136e51",
            "connectivity_type": "public",
            "id": "nat-098b98dc1b844ce63",
            "network_interface_id": "eni-013e9e5b2de2ac7d5",
            "private_ip": "10.0.1.10",
            "public_ip": "13.231.64.62",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-00b94ec85b8488340",
            "tags": {
              "Name": "api-3000-private-01-nat-gw"
            },
            "tags_all": {
              "Name": "api-3000-private-01-nat-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:503561449641:route-table/rtb-0690884e97c6f181c",
            "id": "rtb-0690884e97c6f181c",
            "owner_id": "503561449641",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-098b98dc1b844ce63",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "api-3000-private-01-private-rt"
            },
            "tags_all": {
              "Name": "api-3000-private-01-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03940ad0cf08a3e99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:503561449641:route-table/rtb-095cd963346074b42",
            "id": "rtb-095cd963346074b42",
            "owner_id": "503561449641",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-024395406139317a1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "api-3000-private-01-public-rt"
            },
            "tags_all": {
              "Name": "api-3000-private-01-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03940ad0cf08a3e99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d1afdbb89ade130",
            "route_table_id": "rtb-0690884e97c6f181c",
            "subnet_id": "subnet-02ac27c72a59c7395"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c8de3f0ae2c9e43",
            "route_table_id": "rtb-0690884e97c6f181c",
            "subnet_id": "subnet-09d76a63c74b88426"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba90076858f5e73f",
            "route_table_id": "rtb-095cd963346074b42",
            "subnet_id": "subnet-00b94ec85b8488340"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a02d392efecaeba2",
            "route_table_id": "rtb-095cd963346074b42",
            "subnet_id": "subnet-0ef445f6a677ff546"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:503561449641:security-group/sg-0d247957e7533b8f3",
            "description": "Allow inbound traffic on HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d247957e7533b8f3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "api-3000-private-01-alb-sg",
            "name_prefix": "",
            "owner_id": "503561449641",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "api-3000-private-01-alb-sg"
            },
            "tags_all": {
              "Name": "api-3000-private-01-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03940ad0cf08a3e99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:503561449641:security-group/sg-0d793d8c1b8274cd4",
            "description": "Allow inbound traffic from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d793d8c1b8274cd4",
            "ingress": [],
            "name": "api-3000-private-01-ecs-sg",
            "name_prefix": "",
            "owner_id": "503561449641",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "api-3000-private-01-ecs-sg"
            },
            "tags_all": {
              "Name": "api-3000-private-01-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03940ad0cf08a3e99"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_alb_to_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow traffic from ALB to ECS container",
            "from_port": 3000,
            "id": "sgrule-1990080705",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d793d8c1b8274cd4",
            "security_group_rule_id": "sgr-09e081172ba5197ff",
            "self": false,
            "source_security_group_id": "sg-0d247957e7533b8f3",
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ecs_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:503561449641:subnet/subnet-02ac27c72a59c7395",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ac27c72a59c7395",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503561449641",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "api-3000-private-01-private-subnet-a"
            },
            "tags_all": {
              "Name": "api-3000-private-01-private-subnet-a"
            },
            "vpc_id": "vpc-03940ad0cf08a3e99"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:503561449641:subnet/subnet-09d76a63c74b88426",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d76a63c74b88426",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "503561449641",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "api-3000-private-01-private-subnet-c"
            },
            "tags_all": {
              "Name": "api-3000-private-01-private-subnet-c"
            },
            "vpc_id": "vpc-03940ad0cf08a3e99"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:503561449641:subnet/subnet-00b94ec85b8488340",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b94ec85b8488340",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503561449641",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "api-3000-private-01-public-subnet-a"
            },
            "tags_all": {
              "Name": "api-3000-private-01-public-subnet-a"
            },
            "vpc_id": "vpc-03940ad0cf08a3e99"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:503561449641:subnet/subnet-0ef445f6a677ff546",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef445f6a677ff546",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "503561449641",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "api-3000-private-01-public-subnet-c"
            },
            "tags_all": {
              "Name": "api-3000-private-01-public-subnet-c"
            },
            "vpc_id": "vpc-03940ad0cf08a3e99"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:503561449641:vpc/vpc-03940ad0cf08a3e99",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-046025609f888d9d5",
            "default_route_table_id": "rtb-0c6785e354b859473",
            "default_security_group_id": "sg-08252560508042f00",
            "dhcp_options_id": "dopt-02646fbf1e44d1bd7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03940ad0cf08a3e99",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c6785e354b859473",
            "owner_id": "503561449641",
            "tags": {
              "Name": "api-3000-private-01-vpc"
            },
            "tags_all": {
              "Name": "api-3000-private-01-vpc"
            }
          }
        }
      ]
    }
  ]
}